<resources>
  <string name="app_name">InsuranceMobile</string>

  <!-- Strings related to login -->
  <string name="prompt_email">Email</string>
  <string name="prompt_password">Password</string>
  <string name="action_log_in">Log in</string>
  <string name="action_sign_up">Sign up</string>
  <string name="action_log_in_short">Log in</string>
  <string name="error_invalid_email">This email address is invalid</string>
  <string name="error_invalid_password">This password is too short</string>
  <string name="error_incorrect_password">This password is incorrect</string>
  <string name="error_field_required">This field is required</string>
  <string name="prompt_fist_name">First Name</string>
  <string name="prompt_last_name">Last Name</string>
  <string name="prompt_birthday">Birthday</string>

  <string name="menu_autoquote">Auto Quote</string>
  <string name="menu_agentlookup">Agent Lookup</string>
  <string name="menu_logout">Log Out</string>
  <string name="menu_about">About</string>

  <string name="logged_in_as">Logged in as <b>%s</b></string>

  <string name="search">Search</string>
  <string name="search_by_location">Search by location</string>
  <string name="search_by_name">Search by name</string>
  <string name="show_all_agents">Show all agents</string>

  <string name="agent_search_name">Name</string>
  <string name="agent_search_zip">Zip Code</string>

  <string name="drawer_open">drawer_open</string>
  <string name="drawer_close">drawer_close</string>
  <string name="title_item_list">Items</string>
  <string name="title_item_detail">Item Detail</string>
  <string name="login_text">Default user:\n
    <b>User: </b>john.smith@gmail.com\n
    <b>Password: </b>john
  </string>
  <string name="about_text">
    The <b>Insurance Co.</b> is a company you can trust for all of your insurance needs. Our <b>innovative approach</b> as a leading insurance provider not only saves you <b>time and money</b>, it provides <b>peace of mind</b>. We have invested heavily in <b>technology</b> to bring you the very best in online services...
  </string>

  <string name="radio_car">Car</string>
  <string name="radio_truck">Truck</string>
  <string name="prompt_age">Age</string>
  <string name="radio_male">Male</string>
  <string name="radio_female">Female</string>
  <string name="radio_excellent">Excellent</string>
  <string name="radio_good">Good</string>
  <string name="radio_fair">Fair</string>
  <string name="radio_poor">Poor</string>

  <string name="car_year">Year</string>

  <string-array name="menu_items">
    <item>Auto Quote</item>
    <item>Agent Lookup</item>
    <item>About</item>
    <item>Logout</item>
  </string-array>

  <string-array name="financial_options">
    <item>Own</item>
    <item>Financed</item>
    <item>Lease</item>
  </string-array>

  <string name="quote_result">Your Instant Quote is USD %s every twelve months.</string>
</resources>
