<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

  <android.support.v7.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="66dp"
    android:background="#CED7E7"
    android:elevation="4dp"
    android:minHeight="66dp"
    android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

    <ImageView
      android:id="@+id/imageView"
      android:layout_width="match_parent"
      android:layout_height="66dp"
      android:cropToPadding="true"
      android:scaleType="matrix"
      android:src="@drawable/header"/>
  </android.support.v7.widget.Toolbar>

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/activity_horizontal_margin"
      android:orientation="vertical">


      <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
          android:id="@+id/firstName"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/prompt_fist_name"/>
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
          android:id="@+id/lastName"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/prompt_last_name"/>
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
          android:id="@+id/birthday"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:focusable="false"
          android:hint="@string/prompt_birthday"
          android:inputType="date"/>
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
          android:id="@+id/email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/prompt_email"
          android:inputType="textEmailAddress"/>
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
          android:id="@+id/password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:ems="10"
          android:hint="@string/prompt_password"
          android:inputType="textPassword"/>
      </android.support.design.widget.TextInputLayout>

      <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_up"
        android:theme="@style/MyButton"/>
    </LinearLayout>
  </ScrollView>
</LinearLayout>