<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="silktest.insurancemobile.AgentLookupActivity">

  <android.support.v7.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="66dp"
    android:background="#CED7E7"
    android:elevation="4dp"
    android:minHeight="66dp"
    android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

    <ImageView
      android:id="@+id/imageView"
      android:layout_width="match_parent"
      android:layout_height="66dp"
      android:cropToPadding="true"
      android:scaleType="matrix"
      android:src="@drawable/header"/>
  </android.support.v7.widget.Toolbar>

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical">


        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/search_by_location"
          android:textAppearance="?android:attr/textAppearanceSmall"/>
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

          <android.support.design.widget.TextInputLayout
            android:weightSum="2"
            android:layout_width="0dp"
            android:layout_weight=".7"
            android:layout_height="wrap_content">

            <EditText
              android:id="@+id/agent_search_zip"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/agent_search_zip" />
          </android.support.design.widget.TextInputLayout >

          <ImageButton
            android:id="@+id/use_current_location_button"
            android:layout_width="0dp"
            android:layout_weight=".3"
            android:layout_height="match_parent"
            android:src="@drawable/location"
            android:scaleType="fitCenter"
            android:padding="10dp"
            android:theme="@style/MyButton"/>

        </LinearLayout>

        <Button
          android:id="@+id/search_by_location_button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentTop="true"
          android:layout_centerHorizontal="true"
          android:text="@string/search"
          android:theme="@style/MyButton"/>
      </LinearLayout>

      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/search_by_name"
          android:textAppearance="?android:attr/textAppearanceSmall"/>

        <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

          <EditText
            android:id="@+id/agent_search_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/agent_search_name"/>
        </android.support.design.widget.TextInputLayout>

        <Button
          android:id="@+id/search_by_name_button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentTop="true"
          android:layout_centerHorizontal="true"
          android:text="@string/search"
          android:theme="@style/MyButton"/>

      </LinearLayout>

      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/show_all_agents"
          android:textAppearance="?android:attr/textAppearanceSmall"/>

        <Button
          android:id="@+id/show_all_agents_button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentTop="true"
          android:layout_centerHorizontal="true"
          android:text="@string/search"
          android:theme="@style/MyButton"/>
      </LinearLayout>
    </LinearLayout>
  </ScrollView>
</LinearLayout>
