<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context="silktest.insurancemobile.LoginActivity">

  <android.support.v7.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="66dp"
    android:background="#CED7E7"
    android:elevation="4dp"
    android:minHeight="66dp"
    android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

    <ImageView
      android:id="@+id/imageView"
      android:layout_width="match_parent"
      android:layout_height="66dp"
      android:cropToPadding="true"
      android:scaleType="matrix"
      android:src="@drawable/header"/>
  </android.support.v7.widget.Toolbar>

  <android.support.design.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">


      <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

          <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

          <EditText

            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_log_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            style="@style/AppTheme.MyEditText"
            />

        </android.support.design.widget.TextInputLayout>

        <Button
          android:id="@+id/log_in_button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:text="@string/action_log_in"
          android:theme="@style/MyButton"/>

        <TextView
          android:id="@+id/default_user"
          style="?android:attr/progressBarStyleSmall"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:maxLines="3"
          android:singleLine="false"
          android:text="@string/login_text"
          android:textAlignment="center"
          />
      </LinearLayout>

      <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
      android:id="@+id/sign_up_fab"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:clickable="true"
      android:src="@drawable/plus"
      app:backgroundTint="@color/colorPrimary"
      app:layout_anchor="@id/email_login_form"
      app:layout_anchorGravity="bottom|right|end"
      app:rippleColor="@color/colorAccent"/>
  </android.support.design.widget.CoordinatorLayout>
</LinearLayout>
